[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/main/puzzle/playfield.gd" type="Script" id=1]
[ext_resource path="res://src/main/puzzle/PuzzleTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/puzzle/line-clearer.gd" type="Script" id=3]
[ext_resource path="res://src/main/puzzle/box-builder.gd" type="Script" id=4]
[ext_resource path="res://src/main/puzzle/leaf-poofs.gd" type="Script" id=5]
[ext_resource path="res://assets/main/puzzle/line-erase.wav" type="AudioStream" id=6]
[ext_resource path="res://src/main/puzzle/line-clear-sfx.gd" type="Script" id=7]
[ext_resource path="res://src/main/puzzle/build-box-sfx.gd" type="Script" id=8]
[ext_resource path="res://assets/main/puzzle/line-fall.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/main/puzzle/build-cake-box.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/main/puzzle/veg-erase.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/main/puzzle/clear-snack-box.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/main/puzzle/clear-cake-box.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/main/puzzle/combo-00.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/main/puzzle/fanfare1.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/main/puzzle/fanfare2.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/main/puzzle/fanfare3.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/main/puzzle/playfield-bg.png" type="Texture" id=37]
[ext_resource path="res://src/main/puzzle/combo-tracker.gd" type="Script" id=61]
[ext_resource path="res://assets/main/fuzzy-circle-128.png" type="Texture" id=62]
[ext_resource path="res://assets/main/puzzle/playfield-light.png" type="Texture" id=63]
[ext_resource path="res://src/main/puzzle/playfield-fx.gd" type="Script" id=64]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="TileSet" id=2]
0/name = "playfield-light.png 0"
0/texture = ExtResource( 63 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 36, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="TileSet" id=4]
0/name = "fuzzy-circle-128.png 0"
0/texture = ExtResource( 62 )
0/tex_offset = Vector2( -46, -48 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("TileMapClip/TileMap/Viewport")

[node name="Playfield" type="Control"]
margin_right = 324.0
margin_bottom = 544.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgColor" type="ColorRect" parent="."]
margin_right = 324.0
margin_bottom = 544.0
color = Color( 0.113725, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgSprite" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.25098 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 37 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frosting" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 324.0
margin_bottom = 544.0
color = Color( 1, 0.364706, 0.407843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMapClip" type="Control" parent="."]
margin_right = 324.0
margin_bottom = 544.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="TileMapClip" instance=ExtResource( 2 )]
position = Vector2( 0, -96 )

[node name="PlayfieldFx" type="Node2D" parent="TileMapClip"]
position = Vector2( 0, -96 )
script = ExtResource( 64 )

[node name="LightMap" type="TileMap" parent="TileMapClip/PlayfieldFx"]
material = SubResource( 1 )
tile_set = SubResource( 2 )
cell_size = Vector2( 36, 32 )
format = 1
tile_data = PoolIntArray( 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262144, 0, 0, 262145, 0, 0, 262151, 0, 0, 262152, 0, 0, 327680, 0, 0, 327688, 0, 0, 393220, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 786432, 0, 0, 786433, 0, 0, 786439, 0, 0, 786440, 0, 0, 851968, 0, 0, 851976, 0, 0, 917508, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0 )

[node name="GlowMap" type="TileMap" parent="TileMapClip/PlayfieldFx"]
material = SubResource( 3 )
z_index = 3
tile_set = SubResource( 4 )
cell_size = Vector2( 36, 32 )
format = 1
tile_data = PoolIntArray( 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262144, 0, 0, 262145, 0, 0, 262151, 0, 0, 262152, 0, 0, 327680, 0, 0, 327688, 0, 0, 393220, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 786432, 0, 0, 786433, 0, 0, 786439, 0, 0, 786440, 0, 0, 851968, 0, 0, 851976, 0, 0, 917508, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245191, 0, 0, 1245192, 0, 0 )

[node name="BgStrobe" type="ColorRect" parent="TileMapClip/PlayfieldFx"]
material = SubResource( 5 )
margin_top = 96.0
margin_right = 324.0
margin_bottom = 640.0
color = Color( 0.643137, 0.278431, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TileMapClip/PlayfieldFx/BgStrobe"]

[node name="GlowTween" type="Tween" parent="TileMapClip/PlayfieldFx"]

[node name="LeafPoofs" type="Node2D" parent="TileMapClip"]
position = Vector2( 0, -96 )
z_index = 5
script = ExtResource( 5 )
_puzzle_tile_map_path = NodePath("../TileMap")

[node name="ShadowTexture" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 6 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboTracker" type="Node" parent="."]
script = ExtResource( 61 )

[node name="Fanfare1" type="AudioStreamPlayer" parent="ComboTracker"]
stream = ExtResource( 15 )
volume_db = -4.0
bus = "Sound Bus"

[node name="Fanfare2" type="AudioStreamPlayer" parent="ComboTracker"]
stream = ExtResource( 16 )
volume_db = -4.0
bus = "Sound Bus"

[node name="Fanfare3" type="AudioStreamPlayer" parent="ComboTracker"]
stream = ExtResource( 17 )
volume_db = -4.0
bus = "Sound Bus"

[node name="BoxBuilder" type="Node" parent="."]
script = ExtResource( 4 )
_tile_map_path = NodePath("../TileMapClip/TileMap")

[node name="LineClearer" type="Node" parent="."]
script = ExtResource( 3 )
_tile_map_path = NodePath("../TileMapClip/TileMap")

[node name="LineFallSound" type="AudioStreamPlayer" parent="LineClearer"]
stream = ExtResource( 9 )
bus = "Sound Bus"

[node name="LineClearSfx" type="Node" parent="."]
script = ExtResource( 7 )

[node name="LineEraseSound1" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 6 )
bus = "Sound Bus"

[node name="LineEraseSound2" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "Sound Bus"

[node name="LineEraseSound3" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "Sound Bus"

[node name="VegEraseSound1" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 11 )
bus = "Sound Bus"

[node name="VegEraseSound2" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 11 )
volume_db = -6.0
bus = "Sound Bus"

[node name="VegEraseSound3" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Sound Bus"

[node name="ClearSnackPieceSound" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 12 )
volume_db = -4.0
bus = "Sound Bus"

[node name="ClearCakePieceSound" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 13 )
volume_db = -4.0
bus = "Sound Bus"

[node name="ComboSound" type="AudioStreamPlayer" parent="LineClearSfx"]
stream = ExtResource( 14 )
bus = "Sound Bus"

[node name="BuildBoxSfx" type="Node" parent="."]
script = ExtResource( 8 )

[node name="BuildCakeBoxSound" type="AudioStreamPlayer" parent="BuildBoxSfx"]
stream = ExtResource( 10 )
bus = "Sound Bus"

[node name="BuildSnackBoxSound" type="AudioStreamPlayer" parent="BuildBoxSfx"]
bus = "Sound Bus"
[connection signal="after_piece_written" from="." to="ComboTracker" method="_on_Playfield_after_piece_written"]
[connection signal="before_line_cleared" from="." to="TileMapClip/LeafPoofs" method="_on_Playfield_before_line_cleared"]
[connection signal="before_line_cleared" from="." to="TileMapClip/PlayfieldFx" method="_on_Playfield_before_line_cleared"]
[connection signal="before_line_cleared" from="." to="LineClearSfx" method="_on_Playfield_before_line_cleared"]
[connection signal="before_line_cleared" from="." to="ComboTracker" method="_on_Playfield_before_line_cleared"]
[connection signal="box_built" from="." to="TileMapClip/PlayfieldFx" method="_on_Playfield_box_built"]
[connection signal="box_built" from="." to="ComboTracker" method="_on_Playfield_box_built"]
[connection signal="box_built" from="." to="BuildBoxSfx" method="_on_Playfield_box_built"]
[connection signal="line_cleared" from="." to="ComboTracker" method="_on_Playfield_line_cleared"]
[connection signal="line_erased" from="." to="LineClearSfx" method="_on_Playfield_line_erased"]
[connection signal="combo_break_changed" from="ComboTracker" to="TileMapClip/PlayfieldFx" method="_on_ComboTracker_combo_break_changed"]
[connection signal="after_boxes_built" from="BoxBuilder" to="." method="_on_BoxBuilder_after_boxes_built"]
[connection signal="box_built" from="BoxBuilder" to="." method="_on_BoxBuilder_box_built"]
[connection signal="before_line_cleared" from="LineClearer" to="." method="_on_LineClearer_before_line_cleared"]
[connection signal="line_cleared" from="LineClearer" to="." method="_on_LineClearer_line_cleared"]
[connection signal="line_erased" from="LineClearer" to="." method="_on_LineClearer_line_erased"]
[connection signal="lines_deleted" from="LineClearer" to="." method="_on_LineClearer_lines_deleted"]
